Bug 398026 - Crash when trying create new gamut mask
Summary: Crash when trying create new gamut mask
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Dockers (other bugs)
Version First Reported In: nightly build (please specify the git hash!)
Platform: Microsoft Windows Microsoft Windows
: NOR crash
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-08-29 16:22 UTC by brusheco
Modified: 2018-09-05 14:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description brusheco 2018-08-29 16:22:09 UTC
Version (git 4292470)

Krita crashes when you click the "create new mask" and "edit selected mask" buttons in the Gamut masks docker.

Using Windows 7 64bit OS
Comment 1 Halla Rempt 2018-09-01 10:05:18 UTC
Hi Brusheco,

I cannot reproduce the issue here. Could you please try to create a crash log. See https://docs.krita.org/en/reference_manual/dr_minw_debugger.html#dr-minw for more information.
Comment 2 Halla Rempt 2018-09-01 10:08:01 UTC
Wait, I take that back. I cannot reproduce on Linux, but I _can_ reproduce on Windows: 

krita.exe caused an Access Violation at location 00007FFDC9EC48B0 in module libkritaimage.dll Reading from location 0000000000000060.

AddrPC           Params
00007FFDC9EC48B0 000000001EE967A0 00007FFDCB2C7100 0000000100000004  libkritaimage.dll!0x1148b0 KisImage::rootLayer+0x0
00007FFDC8D55042 01D441DB4DDFA63D 0000000000000000 000000005B8A6466  kritagamutmask.dll!0x5042 GamutMaskDock::getShapeLayer+0x62
00007FFDC8D52D5F 0000000019718130 000000001CFC3F70 0000000019718130  kritagamutmask.dll!0x2d5f GamutMaskDock::openMaskEditor+0x2df
00007FFDC8D55769 00000000196EA3B0 00000000005FB1D0 000000001C82EB50  kritagamutmask.dll!0x5769 GamutMaskDock::slotGamutMaskCreateNew+0x69
00007FFDC8D57F25 000000001C82EB50 000000001FD0AFB0 00000000005FB190  kritagamutmask.dll!0x7f25 GamutMaskDock::qt_static_metacall+0x235
00007FFDCB19B42A 000000001C82EB50 000000001C82EB50 0000000000000001  Qt5Core.dll!0x23b42a QMetaObject::activate+0x7fa
00007FFDCA530402 000000001C82EB50 00007FFDCA530146 00000000005FB930  Qt5Widgets.dll!0x100402 QAbstractButton::toggled+0x212
00007FFDCA531839 0000000002AA0250 00007FFDCCB50FA6 00000000005FFBB0  Qt5Widgets.dll!0x101839 QAbstractButton::setIconSize+0x679
00007FFDCA531A05 00000000005FB930 00007FFDCB3881A8 00000000005FB410  Qt5Widgets.dll!0x101a05 QAbstractButton::mouseReleaseEvent+0xd5
00007FFDCA474368 00000000005FFBB0 0000000000000001 000000001C82EB50  Qt5Widgets.dll!0x44368 QWidget::event+0x1d8
00007FFDCA437B5C 00000000197044B0 00007FFDCCBBAC90 0000000F00000010  Qt5Widgets.dll!0x7b5c QApplicationPrivate::notify_helper+0x9c
00007FFDCA43F41B 0000000000000000 00007FFDCAF90DFF 0000000000000000  Qt5Widgets.dll!0xf41b QApplication::notify+0x93b
00007FFDCCBA6F26 C0969C0000000000 C08E600000000000 0000000000000000  libkritaui.dll!0x276f26 KisApplication::notify+0x16
00007FFDCB170778 3FF0000000000000 0000000000000001 0000000000000000  Qt5Core.dll!0x210778 QCoreApplication::notifyInternal2+0x198
00007FFDCA43E258 000000006A890D30 00007FFE0F2D3E77 000000001FCF9FE0  Qt5Widgets.dll!0xe258 QApplicationPrivate::sendMouseEvent+0x208
00007FFDCA488D30 0000000002AA0250 00007FFDCB16F62C 0000000000000004  Qt5Widgets.dll!0x58d30 QDesktopWidget::qt_metacall+0x2a50
00007FFDCA48B2F4 00000000005FFBB0 000000000067ADE0 0000000000000001  Qt5Widgets.dll!0x5b2f4 QDesktopWidget::qt_metacall+0x5014
00007FFDCA437B5C 000000007632AC00 0000000000000060 0000000000000058  Qt5Widgets.dll!0x7b5c QApplicationPrivate::notify_helper+0x9c
00007FFDCA43EDD0 00000000005FBDC0 00007FFDCAF90DFF 0000000000000000  Qt5Widgets.dll!0xedd0 QApplication::notify+0x2f0
00007FFDCCBA6F26 00000000001F03E8 00007FFDCA9FF6E4 00007FFDCA9F07A0  libkritaui.dll!0x276f26 KisApplication::notify+0x16
00007FFDCB170778 40A6DA0000000000 409ED40000000000 00000000001F03E8  Qt5Core.dll!0x210778 QCoreApplication::notifyInternal2+0x198
00007FFDCA9E92D1 0000000000000000 0000000000000000 000000001CE019D8  Qt5Gui.dll!0x392d1 QGuiApplicationPrivate::processMouseEvent+0x721
00007FFDCA9EAD85 0000000000000001 0000000002BBB580 0000000000070426  Qt5Gui.dll!0x3ad85 QGuiApplicationPrivate::processWindowSystemEvent+0x105
00007FFDCA9C1CA0 0000000000000401 0000000000070426 0000000000000000  Qt5Gui.dll!0x11ca0 QWindowSystemInterface::sendWindowSystemEvents+0x370
00007FFDCB1C8016 0000000080000012 0000000000000001 0000000000000000  Qt5Core.dll!0x268016 QEventDispatcherWin32Private::sendTimerEvent+0x666
00007FFE0D266CC1 0000000000000000 00007FFDCB1C7AE0 0000000000070426  USER32.dll!0x16cc1 UserCallWinProcCheckWow+0x2c1
00007FFE0D266693 00000000005FC570 0000000000000000 00000000005FC570  USER32.dll!0x16693 DispatchMessageWorker+0x1c3
00007FFDCB1C730B 0000000002BBB580 0000000000000024 00000000006A2260  Qt5Core.dll!0x26730b QEventDispatcherWin32::processEvents+0x5cb
000000006A8DEF35 0000000000000080 0000000000000014 000000001CE027D0  qwindows.dll!0x5ef35 qt_plugin_instance+0x28e5
00007FFDCB16EE5F 0000000000000000 0000000000000001 00007FFDCB2C7100  Qt5Core.dll!0x20ee5f QEventLoop::exec+0x13f
00007FFDCB1777B7 00000000005FFC00 00000000005FFBB0 00000000005FFB90  Qt5Core.dll!0x2177b7 QCoreApplication::exec+0x77
0000000140006623 0000000000000001 000000000067AE00 0000000140FBF980  krita.exe!0x6623 main+0x17b3
00000001400013F7 0000000000000000 0000000000000000 0000000000000000  krita.exe!0x13f7 __tmainCRTStartup+0x247
00000001400014FB 0000000000000000 0000000000000000 0000000000000000  krita.exe!0x14fb WinMainCRTStartup+0x1b
00007FFE0DC03034 0000000000000000 0000000000000000 0000000000000000  KERNEL32.DLL!0x13034 BaseThreadInitThunk+0x14
00007FFE0F311431 0000000000000000 0000000000000000 0000000000000000  ntdll.dll!0x71431 RtlUserThreadStart+0x21
Comment 3 Anna Medonosova 2018-09-05 14:57:17 UTC
Git commit 1c8b8bbd402ed67453290f43c6c75917bcbcd887 by Anna Medonosova.
Committed on 05/09/2018 at 14:56.
Pushed by amedonosova into branch 'master'.

Fixes crash on gamut mask edit on Windows

  * fixes editor template file/new mask icon lookup
  * adds code to gracefully handle missing template file
    - the user is notified by a QMessageBox dialog instead
      of using KIS_ASSERT (which caused even more spectacular
      crash); the error is logged to dbgPlugins

M  +45   -19   plugins/dockers/gamutmask/gamutmask_dock.cpp
M  +5    -4    plugins/dockers/gamutmask/gamutmask_dock.h

https://commits.kde.org/krita/1c8b8bbd402ed67453290f43c6c75917bcbcd887