Fixes crash on gamut mask edit on Windows

* fixes editor template file/new mask icon lookup
  * adds code to gracefully handle missing template file
    - the user is notified by a QMessageBox dialog instead
      of using KIS_ASSERT (which caused even more spectacular
      crash); the error is logged to dbgPlugins

BUG: 398026